# solar-oven

./: .gitignore  Cargo.toml  README.md  install.sh  package.json  pnpm-lock.yaml  vite.config.ts
api/: graph.rs
src/: cost.rs  design.rs  input.rs  main.rs  materials.rs  reflectors.rs  trendline.rs
src-rs/: cost.rs  design.rs  export.rs  gen-types.rs  lib.rs  optimize.rs  oven.rs  reflectors.rs
src-rs/materials/: macros.rs  mod.rs  window.rs
src/lib/: index.ts  types.ts
src/materials/: absorber.rs  body.rs  insulator.rs  macros.rs  mod.rs  reflectors.rs  window.rs
src/routes/: +page.svelte
